# crosswindow-imgui

./: CMakeLists.txt  readme.md
assets/: imgui.frag.hlsl  imgui.vert.hlsl  readme.md
src/CrossWindow/: ImGui.h
src/CrossWindow/ImGui/: DirectX12-Shaders.h  DirectX12.cpp  DirectX12.h  ImGuiManager.cpp  ImGuiManager.h  OpenGL.cpp  OpenGL.h
